--- a/p2/Makefile
+++ b/p2/Makefile
@@ -1,21 +1,30 @@
 USERNAME=anguinau
 VOLUME_DIR=volume
 
+HOST_FILE=/etc/hosts
+
+APP1_HOST=192.168.56.110 app1.com
+APP2_HOST=192.168.56.110 app2.com
+
 all: up
 
 up:
 	@mkdir -p "$(VOLUME_DIR)"
 	@vagrant up --provider=virtualbox
 
-ssh:
-	@vagrant ssh "$(USERNAME)S"
-
 down:
 	@vagrant halt
 
-clean:
+clean: down
 	@vagrant destroy -f
 
 re: clean up
 
-.PHONY: all up ssh down clean re
+ssh:
+	@vagrant ssh "$(USERNAME)S"
+
+host:
+	@echo "$(APP1_HOST)" | sudo tee -a "$(HOST_FILE)"
+	@echo "$(APP2_HOST)" | sudo tee -a "$(HOST_FILE)"
+
+.PHONY: all up down clean re ssh host
