--- a/bonus/k8s/argocd/application.yaml
+++ b/bonus/k8s/argocd/application.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: http://gitlab-webservice-default.gitlab.svc.cluster.local:8181/anguinau/inception-of-things.git
+    repoURL: http://$(GITLAB_URL)/$(GITLAB_PROJECT).git
     path: .
 
   destination:
